--- a/app/src/main/models/main/layout/activity_main.xml
+++ b/app/src/main/models/main/layout/activity_main.xml
@@ -5,7 +5,15 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.lefu.test.activities.main.MainActivity">
+    tools:context="com.lefu.test.activities.main.NewsActivity">
 
-    <include layout="@layout/layout_header"/>
+    <include
+        android:id="@+id/rl_header"
+        layout="@layout/layout_header"/>
+
+    <TextView
+        android:id="@+id/tv_news_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 </RelativeLayout>
