--- a/app/src/main/models/base/layout/activity_frame.xml
+++ b/app/src/main/models/base/layout/activity_frame.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -21,7 +22,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@color/transparent"
             android:button="@null"
+            android:drawableTop="@drawable/selector_frame_bottom_button_img1"
             android:gravity="center"
             android:text="@string/frame_item_one"
             android:textColor="@drawable/selector_frame_bottom_text_color"/>
@@ -31,7 +34,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@color/transparent"
             android:button="@null"
+            android:drawableTop="@drawable/selector_frame_bottom_button_img2"
             android:gravity="center"
             android:text="@string/frame_item_two"
             android:textColor="@drawable/selector_frame_bottom_text_color"/>
@@ -41,7 +46,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@color/transparent"
             android:button="@null"
+            android:drawableTop="@drawable/selector_frame_bottom_button_img3"
             android:gravity="center"
             android:text="@string/frame_item_three"
             android:textColor="@drawable/selector_frame_bottom_text_color"/>
@@ -51,7 +58,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@color/transparent"
             android:button="@null"
+            android:drawableTop="@drawable/selector_frame_bottom_button_img4"
             android:gravity="center"
             android:text="@string/frame_item_four"
             android:textColor="@drawable/selector_frame_bottom_text_color"/>
