--- a/app/src/main/models/base/layout/fragment_tab_four.xml
+++ b/app/src/main/models/base/layout/fragment_tab_four.xml
@@ -8,4 +8,9 @@
         android:id="@+id/tab_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/btn_click"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
