--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,11 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="transparent">#ffffffff</color>
     <color name="white">#ffffff</color>
     <color name="_FF0000">#ff0000</color>
+    <color name="_FF323C">#ff323c</color>
+    <color name="_CCCCCC">#CCCCCC</color>
     <color name="_333333">#333333</color>
     <color name="_666666">#666666</color>
     <color name="_E5E5E5">#E5E5E5</color>
