--- a/app/src/main/models/base/layout/fragment_tab_one.xml
+++ b/app/src/main/models/base/layout/fragment_tab_one.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <TextView
         android:id="@+id/tab_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <ImageView
         android:id="@+id/iv_waiting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/animator_vector_waiting"/>
-</RelativeLayout>
+        app:srcCompat="@drawable/animator_vector_waiting"/>
+</LinearLayout>
