--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="_CCCCCC">#CCCCCC</color>
     <color name="_333333">#333333</color>
     <color name="_666666">#666666</color>
+    <color name="_999999">#999999</color>
     <color name="_E5E5E5">#E5E5E5</color>
 </resources>
