--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,11 +6,19 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlActivated">@color/_999999</item>
     </style>
 
     <style name="line">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">1px</item>
+        <item name="android:layout_height">@dimen/d1</item>
+        <item name="android:background">@color/_E5E5E5</item>
+    </style>
+
+
+    <style name="v_line">
+        <item name="android:layout_width">@dimen/d1</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/_E5E5E5</item>
     </style>
 </resources>
