--- a/app/src/main/models/base/layout/fragment_tab_three.xml
+++ b/app/src/main/models/base/layout/fragment_tab_three.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
-    <TextView
-        android:id="@+id/tab_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+  <TextView
+      android:id="@+id/tab_name"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      />
+
+  <android.support.v7.widget.AppCompatImageView
+      android:id="@+id/iv_load_image"
+      android:layout_width="@dimen/d100"
+      android:layout_height="@dimen/d100"
+      />
 </RelativeLayout>
