--- a/app/src/main/models/common/layout/dialog_common_timeout.xml
+++ b/app/src/main/models/common/layout/dialog_common_timeout.xml
@@ -1,54 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fl_dialog_container"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             tools:ignore="RtlHardcoded">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/tv_dialog_title"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/d45"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="@string/dialog_timeout_title"
+            android:textColor="@color/_333333"
+            android:textSize="@dimen/f15"/>
+
+        <TextView
+            android:id="@+id/tv_dialog_content"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/d45"
+            android:layout_below="@id/tv_dialog_title"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="@string/dialog_timeout"
+            android:textColor="@color/_FF0000"
+            android:textSize="@dimen/f14"/>
+
+        <View
+            android:id="@+id/v_line1"
+            style="@style/line"
+            android:layout_below="@id/tv_dialog_content"/>
+
+        <Button
+            android:id="@+id/btn_confirm"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
-
-            <TextView
-                android:id="@+id/tv_dialog_title"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/d45"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:text="@string/dialog_timeout_title"
-                android:textColor="@color/_333333"
-                android:textSize="@dimen/f15"/>
-
-            <TextView
-                android:id="@+id/tv_dialog_content"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/d45"
-                android:layout_below="@id/tv_dialog_title"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:text="@string/dialog_timeout"
-                android:textColor="@color/_FF0000"
-                android:textSize="@dimen/f14"/>
-
-            <View
-                android:id="@+id/v_line1"
-                style="@style/line"
-                android:layout_below="@id/tv_dialog_content"/>
-
-            <Button
-                android:id="@+id/btn_confirm"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/d45"
-                android:layout_below="@id/v_line1"
-                android:layout_marginLeft="@dimen/d15"
-                android:layout_marginRight="@dimen/d15"
-                android:background="@drawable/selector_btn_confirm"
-                android:text="@string/confirm"
-                android:textColor="@color/white"/>
-        </RelativeLayout>
+            android:layout_height="@dimen/d45"
+            android:layout_below="@id/v_line1"
+            android:background="@drawable/selector_btn_confirm"
+            android:text="@string/confirm"
+            android:textColor="@color/white"/>
     </RelativeLayout>
 </FrameLayout>
